Added Hero Section

--- a/Brew_Heaven_Assignment_1/index.html
+++ b/Brew_Heaven_Assignment_1/index.html
@@ -34,3 +34,15 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <!-- Hero section -->
+      <section id="home" class="hero">
+        <div class="hero-content">
+          <h1>Welcome to Brew Heaven</h1>
+          <p class="quote">"Life begins after coffee."</p>
+          <a href="#menu" class="cta-button">Explore Our Menu</a>
+        </div>
+      </section>
+      </main>
+    </body>
+    </html>
