--- a/Brew_Heaven_Assignment_1/index.html
+++ b/Brew_Heaven_Assignment_1/index.html
@@ -58,6 +58,36 @@
           <!-- Menu items will be dynamically added here -->
         </div>
       </section>
+
+      <!-- Gallery section -->
+      <section id="gallery">
+        <h2>Photo Gallery</h2>
+        <div class="gallery-container">
+          <img src="img/coffee_shop_interior.jpg" alt="Coffee Shop Interior" />
+          <img src="img/Latte_art.jpg" alt="Latte Art" />
+          <img src="img/Coffee_Beans.jpg" alt="Coffee Beans" />
+        </div>
+      </section>
+
+      <!-- Blog section -->
+      <section id="blog">
+        <h2>Latest News</h2>
+        <article>
+          <h3>New Seasonal Blend</h3>
+          <p>
+            Try our new autumn-inspired coffee blend, available for a limited
+            time!
+          </p>
+        </article>
+        <article>
+          <h3>Barista Championship</h3>
+          <p>
+            Our head barista won first place in the city's annual barista
+            championship!
+          </p>
+        </article>
+      </section>
+
     </main>
     <script src="app.js"></script>
     </body>
