--- a/Brew_Heaven_Assignment_1/index.html
+++ b/Brew_Heaven_Assignment_1/index.html
@@ -88,7 +88,27 @@
         </article>
       </section>
 
+        <!-- Contact form section -->
+        <section id="contact">
+          <h2>Contact Us</h2>
+          <form id="contactForm">
+            <label for="name">Name:</label>
+            <input
+              type="text"
+              id="name"
+              name="name"
+              required
+              autocomplete="given-name"
+            />
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" required></textarea>
+            <button type="submit">Send</button>
+          </form>
+        </section>
     </main>
+    <footer>
+      <p>&copy; 2024 Coffee Shop (By Vansh & Kathan)</p>
+    </footer>
     <script src="app.js"></script>
     </body>
     </html>
