--- a/Brew_Heaven_Assignment_1/index.html
+++ b/Brew_Heaven_Assignment_1/index.html
@@ -110,5 +110,29 @@
       <p>&copy; 2024 Coffee Shop (By Vansh & Kathan)</p>
     </footer>
     <script src="app.js"></script>
+    <script>
+      // Event listener for DOM content loaded
+      document.addEventListener('DOMContentLoaded', function() {
+          const authLink = document.getElementById('authLink');
+          const currentUser = JSON.parse(localStorage.getItem('currentUser'));
+  
+          // Update authentication link based on user login status
+          if (currentUser) {
+              authLink.innerHTML = `
+                  <a href="#" id="logoutLink"><i class="fas fa-sign-out-alt"></i> Logout (${currentUser.username})</a>
+              `;
+              // Add event listener for logout
+              document.getElementById('logoutLink').addEventListener('click', function(e) {
+                  e.preventDefault();
+                  localStorage.removeItem('currentUser');
+                  window.location.reload();
+              });
+          } else {
+              authLink.innerHTML = `
+                  <a href="auth.html"><i class="fas fa-user"></i> Login/Signup</a>
+              `;
+          }
+      });
+    </script>
     </body>
     </html>
