--- a/Brew_Heaven_Assignment_2/index.html
+++ b/Brew_Heaven_Assignment_2/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- <link rel="icon" type="image/jpeg" href="/Brew_Heaven_Assignment_2/Logo_Coffee.jpeg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Brew Heaven</title>
   </head>
   <body>
     <div id="root"></div>
